--- a/pom.xml
+++ b/pom.xml
@@ -60,4 +60,23 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.mycompany.bobinadoscastex.BobinadosCastex</exec.mainClass>
     </properties>
+    
+       
+    <build>
+        <plugins> 
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-jar-plugin</artifactId> 
+                <version>3.1.0</version> 
+                <configuration> 
+                    <archive> 
+                        <manifest> 
+                            <mainClass>com.mycompany.bobinadoscastex.BobinadosCastex</mainClass> 
+                        </manifest> 
+                    </archive> 
+                </configuration> 
+            </plugin> 
+        </plugins>
+    </build>
+   
 </project>
